New approach on html: redirection

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<html lang="en" style="width:100%; height:100%;">
+<html lang="en">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <title>Sergio García Prado - Curriculum Vitae</title>
 </head>
-  <body style="width:100%; height:100%; margin:0;">
-    <div style="width:100%; height:100%;" frameborder="0" id="viewer"></div>
+  <body>
+    <script language="javascript" type="text/javascript">
+      window.open("garciparedes-cv.pdf", "_self")
+    </script>
   </body>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfobject/2.0.201604172/pdfobject.min.js"></script>
-  <script>PDFObject.embed("garciparedes-cv.pdf", "#viewer");</script>
 </html>
